# water-tank-level-monitor

./: .env.example  .gitignore  README.md  pyproject.toml  water-tank-monitor-spec.md
misc-scripts/: analyze_water_tank.py  improved_water_tank_analysis.py  investigate_outliers.py  test_level.py  water_tank_analysis_summary.md  water_tank_improved_bucket_rates.csv  water_tank_improved_moving_avg_rates.csv  water_tank_improved_regression_summary.csv  water_tank_logs.csv  water_tank_logs.json  water_tank_rate_analysis.csv  water_tank_smoothed_rates.csv
scripts/: init_db.sql
src/: __init__.py  analyzer.py  config.py  daily_report.py  data_collector.py  email_builder.py  email_sender.py  supabase_client.py  tuya_client.py
templates/: daily_report.html
