[project]
name = "water-tank-monitor"
version = "0.1.0"
description = "Water tank monitoring with Tuya IoT sensors, Supabase storage, and email reports"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "supabase>=2.0.0",
    "numpy>=1.26.0",
    "pytz>=2024.1",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

